add estilo ao formulario

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <label>Front-end</label>
 
                     <input type="checkbox" value="back">
-                    <label>back-end</label>
+                    <label>Back-end</label>
 
                     <input type="checkbox" value="banco-dados">
                     <label>Banco de dados</label>
@@ -62,7 +62,7 @@
             </div>
             <div class="form-group">
                 <label for="">Nome</label>
-                <input type="text" placeholder="(00) 9 123 456 789)">                
+                <input type="text" placeholder="(00) 9 123 456 789">                
             </div>
             <div class="form-group">
                 <label for="">Insira uma frese criativa aqui</label>
